--- a/css/styles.css
+++ b/css/styles.css
@@ -15,11 +15,13 @@
 	background-size: cover;
 }
 #logo{
-	height: auto;
 	width: 40%;
-	position: absolute;
-	top: 40%;
-    left: 30%;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+#logo img{
+	width: 100%;
 }
 .nav{
 	display: block;
@@ -46,7 +48,6 @@
 	margin-right: auto;
 	height: auto;
 	text-align: center;
-	transform: translateY(1600%);
 }
 .section{
 	display: block;
@@ -54,7 +55,6 @@
 	width: 100%;
 	height: 800px;
 	background-color: black;
-	border: 2px white solid;
 }
 
 h1{
@@ -64,12 +64,5 @@ h1{
 /* Media queries */
 
 @media only screen and (max-width: 1024px) {
-    #logo{
-    	position: static;
-    	width: 100%;
-    	transform: translateY(100%);
-    }
-    .ulcontainer{
-    	transform: translateY(700%);
-    }
+    
 }
