--- a/css/styles.css
+++ b/css/styles.css
@@ -13,11 +13,11 @@
 	background-image: url('../fondo.jpg');
 	-webkit-background-size: cover;
 	background-size: cover;
+	display: flex;
 }
 #logo{
 	width: 40%;
-	margin-left: auto;
-	margin-right: auto;
+	margin: auto;
 	text-align: center;
 }
 #logo img{
