--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
 	-webkit-background-size: cover;
 	background-size: cover;
 	display: flex;
+	text-align: center;
 }
 #logo{
 	width: 40%;
@@ -53,7 +54,7 @@
 	display: block;
 	text-align: center;
 	width: 100%;
-	height: 400px;
+	height: 700px;
 	background-color: green;
 	display: flex;
 	justify-content: center;
@@ -65,7 +66,6 @@
 }
 .servicios{
 	background-color: red;
-	padding-top: 70px;
 }
 .contacto{
 	background-color: blue;
@@ -114,6 +114,46 @@
 .boxChild{
 	margin: 15px;
 	width: 20%;
+}
+.boxChild img{
+	width: 100%;
+}
+
+.footer{
+	text-align: center;
+}
+.footer img{
+	width: 12%;
+	filter: invert(100%);
+}
+.footer nav ul li a{
+	color: green;
+}
+a i{
+	text-decoration: none;
+	color: black;
+}
+.contact-item{
+	font-size: 40px;
+	color: white;
+	margin-bottom: 10px;
+}
+.boxChild h3{
+	color: white;
+	text-transform: uppercase;
+}
+.boxChild p{
+	color: white;
+}
+.boxChild ul{
+	list-style: none;
+}
+.box-border{
+	border: 2px white solid;
+	width: 30%;
+}
+.contacto{
+	height: 270px;
 }
 /* Media queries */
 
