--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 .header{
 	width: 100%;
 	height: 100vh;
-	background-image: url('../fondo.jpg');
+	background-image: url('../inicio.jpg');
 	-webkit-background-size: cover;
 	background-size: cover;
 	display: flex;
@@ -63,12 +63,22 @@
 }
 .nosotros{
 	background-color: gray;
+	background-image: url('../Nosotros_fondo.jpg');
+	-webkit-background-size: cover;
+	background-size: cover;
 }
 .servicios{
-	background-color: red;
+	background-color: gray;
+	background-image: url('../servicios_fondo.jpg');
+	-webkit-background-size: cover;
+	background-size: cover;
 }
 .contacto{
-	background-color: blue;
+	background-color: gray;
+	background-image: url('../contacto.jpg');
+	-webkit-background-size: cover;
+	background-size: cover;
+	height: 470px;
 }
 
 .title{
@@ -121,13 +131,15 @@
 
 .footer{
 	text-align: center;
+	padding-top: 20px;
 }
 .footer img{
 	width: 12%;
-	filter: invert(100%);
+	/*filter: invert(100%);*/
 }
 .footer nav ul li a{
-	color: green;
+	color: #095263;
+	text-transform: uppercase;
 }
 a i{
 	text-decoration: none;
@@ -150,10 +162,11 @@ a i{
 }
 .box-border{
 	border: 2px white solid;
-	width: 30%;
+	width: 33%;
+	padding: 20px;
 }
-.contacto{
-	height: 270px;
+.arrow a i{
+	color: #095263;
 }
 /* Media queries */
 
